--- a/estilos.css
+++ b/estilos.css
@@ -107,8 +107,8 @@ body{
     opacity: 0.8;
 }
 .redes-sociais .linkedin{
-    background-color: cornflowerblue;
+    background-color: rgb(247, 111, 48);
 }
 .redes-sociais .github{
-    background-color: #414141;
+    background-color: #c25811d3;
 }
